@@ -11,7 +11,8 @@ potential.energy.reference=Potential Energy Reference
 path=Path
 plot=Plot
 edit.skater=Edit Skater >>
-record=Record
+record=Record Path
+pause_path=Stop
 reset=Reset
 return.skater=Return Skater
 energy.vs.time=Energy vs. Time
